--- a/exploration.html
+++ b/exploration.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 11 2021 13:58:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Feb 27 2021 12:22:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6022e4e525abed529820814c" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,9 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" data-no-scroll="1" role="banner" class="navigation w-nav">
     <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
-    <a href="index.html" class="logo-link w-nav-brand"></a>
+    <a href="index.html" class="logo-link w-nav-brand"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16.359375px, (max-width: 991px) 3vw, 8vw" srcset="images/cbaLogoFinal.png 500w, images/cbaLogoFinal.png 800w, images/cbaLogoFinal.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
+      <div class="text-block-6">CENTRAL BANK SPEECHES</div>
+    </a>
     <div class="navigation-wrap">
       <div class="menu w-clearfix">
         <nav role="navigation" class="navigation-items w-nav-menu">
@@ -31,9 +33,7 @@
           <a href="exploration.html" aria-current="page" class="navigation-item w-nav-link w--current">Exploration</a>
           <a href="data.html" class="navigation-item w-nav-link">Data</a>
           <div class="dropdownwrapper">
-            <div data-w-id="Div Block" class="div-trigger">
-              <div class="text-block">ABOUT</div>
-            </div>
+            <a href="contact.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">ABOUT</a>
             <div class="div-content">
               <a href="news.html" class="navigation-item w-nav-link">NEWS</a>
               <a href="documentation.html" class="navigation-item w-nav-link">DOCUMENTATION</a>
@@ -53,11 +53,7 @@
       </div>
     </div>
   </header>
-  <div class="section">
-  <div class="container">
-  <iframe src="http://35.246.191.18:5601/app/dashboards#/view/c66e28b0-7107-11eb-ba89-bf6e91467462?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-15m,to:now))&_a=(description:'',filters:!(('$state':(store:appState),meta:(alias:!n,controlledBy:'1613556278407',disabled:!f,index:'4f86bc10-7104-11eb-ba89-bf6e91467462',key:Day,negate:!f,params:(gte:1,lte:31),type:range),range:(Day:(gte:1,lte:31)))),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),panels:!((embeddableConfig:(enhancements:()),gridData:(h:15,i:fd8ac7b9-6123-45a4-aa28-6f27bf61fbd0,w:24,x:24,y:15),id:a4123ae0-7107-11eb-ba89-bf6e91467462,panelIndex:fd8ac7b9-6123-45a4-aa28-6f27bf61fbd0,type:visualization,version:'7.11.0'),(embeddableConfig:(enhancements:(),hiddenLayers:!(),isLayerTOCOpen:!t,mapCenter:(lat:19.94277,lon:0,zoom:1.78),openTOCDetails:!()),gridData:(h:15,i:'6331bc88-dfc0-4e3c-92d7-4cc1de753e81',w:24,x:24,y:0),id:'063ad200-7107-11eb-ba89-bf6e91467462',panelIndex:'6331bc88-dfc0-4e3c-92d7-4cc1de753e81',type:map,version:'7.11.0'),(embeddableConfig:(enhancements:()),gridData:(h:15,i:f0b47f26-3f1c-43fc-8f27-0a3600fcbc02,w:24,x:0,y:0),id:'8e517e60-7106-11eb-ba89-bf6e91467462',panelIndex:f0b47f26-3f1c-43fc-8f27-0a3600fcbc02,type:lens,version:'7.11.0'),(embeddableConfig:(enhancements:()),gridData:(h:15,i:e40dee07-deef-4ef3-9e21-94d82e4fbff7,w:24,x:0,y:15),id:'6ef56da0-7107-11eb-ba89-bf6e91467462',panelIndex:e40dee07-deef-4ef3-9e21-94d82e4fbff7,type:lens,version:'7.11.0')),query:(language:kuery,query:''),tags:!(),timeRestore:!f,title:testdashboard,viewMode:view)" height="1000" width="1000"></iframe>
-  </div>
-  </div>
+  <div class="section-4"></div>
   <div class="section">
     <div class="container">
       <div class="footer-wrap">
