--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 17 2021 10:41:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Feb 27 2021 12:22:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="600ec0335d96f052017731f2" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,9 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" data-no-scroll="1" role="banner" class="navigation w-nav">
     <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
-    <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"></a>
+    <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16.359375px, (max-width: 991px) 3vw, 8vw" srcset="images/cbaLogoFinal.png 500w, images/cbaLogoFinal.png 800w, images/cbaLogoFinal.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
+      <div class="text-block-6">CENTRAL BANK SPEECHES</div>
+    </a>
     <div class="navigation-wrap">
       <div class="menu w-clearfix">
         <nav role="navigation" class="navigation-items w-nav-menu">
@@ -31,9 +33,7 @@
           <a href="exploration.html" class="navigation-item w-nav-link">Exploration</a>
           <a href="data.html" class="navigation-item w-nav-link">Data</a>
           <div class="dropdownwrapper">
-            <div data-w-id="Div Block" class="div-trigger">
-              <div class="text-block">ABOUT</div>
-            </div>
+            <a href="contact.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">ABOUT</a>
             <div class="div-content">
               <a href="news.html" class="navigation-item w-nav-link">NEWS</a>
               <a href="documentation.html" class="navigation-item w-nav-link">DOCUMENTATION</a>
@@ -46,59 +46,63 @@
   </div>
   <div class="section cc-store-home-wrap">
     <div class="intro-header">
-      <div data-poster-url="https://uploads-ssl.webflow.com/600ec03352cf05a3da53145c/600fc54c88ec74860734db2e_Bildschirmaufnahme 2021-01-26 um 083033-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/600ec03352cf05a3da53145c/600fc54c88ec74860734db2e_Bildschirmaufnahme 2021-01-26 um 083033-transcode.mp4,https://uploads-ssl.webflow.com/600ec03352cf05a3da53145c/600fc54c88ec74860734db2e_Bildschirmaufnahme 2021-01-26 um 083033-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/600ec03352cf05a3da53145c/600fc54c88ec74860734db2e_Bildschirmaufnahme 2021-01-26 um 083033-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-          <source src="https://uploads-ssl.webflow.com/600ec03352cf05a3da53145c/600fc54c88ec74860734db2e_Bildschirmaufnahme 2021-01-26 um 083033-transcode.mp4" data-wf-ignore="true">
-          <source src="https://uploads-ssl.webflow.com/600ec03352cf05a3da53145c/600fc54c88ec74860734db2e_Bildschirmaufnahme 2021-01-26 um 083033-transcode.webm" data-wf-ignore="true">
+      <div data-poster-url="videos/MVI_9186-poster-00001.jpg" data-video-urls="videos/MVI_9186-transcode.mp4,videos/MVI_9186-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/MVI_9186-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+          <source src="videos/MVI_9186-transcode.mp4" data-wf-ignore="true">
+          <source src="videos/MVI_9186-transcode.webm" data-wf-ignore="true">
         </video>
         <div class="intro-content cc-homepage">
           <div class="intro-text">
-            <div class="heading-jumbo">Central Bank Speeches</div>
-            <div class="paragraph-bigger cc-bigger-white-light">We created the biggest dataset of central bank speeches and make it available for you.<br></div>
+            <div class="heading-jumbo">Tracking Central Bank Talk<br>via Data Science</div>
+            <div class="paragraph-bigger cc-bigger-white-light">What do central bankers talk about<br>and why? The Central Bank Observer provides <br>a (free) exploration and data of central bankers <br>speeches<br></div>
             <a href="documentation.html" class="button cc-jumbo-button cc-jumbo-white w-inline-block">
-              <div>Learn More</div>
+              <div class="text-block-7">Learn More</div>
             </a>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <section id="cards-section" class="cards-section-2">
+  <section id="cards-section" class="cards-section-2"><img src="images/pfeil-orange.svg" loading="lazy" data-w-id="f7352420-c24f-1bb9-7c80-c2d1c9b72f5f" alt="" class="image-5">
     <div class="centered-container-2 w-container">
       <div class="cards-grid-container-2">
         <div id="w-node-block-2-017731f2" class="div-block-7">
-          <h3>Card one</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <h3 class="heading-11">What we offer</h3>
         </div>
-        <div id="w-node-c68cb3d6-77c2-63f3-b298-ce27683a7767-017731f2" class="div-card">
-          <div class="cards-image-mask"><img src="images/bruno-neurath-wilson-7y3G6s201Gk-unsplash.jpg" srcset="images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-500.jpeg 500w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-800.jpeg 800w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-1600.jpeg 1600w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-2000.jpeg 2000w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-2600.jpeg 2600w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-3200.jpeg 3200w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash.jpg 4608w" height="60" sizes="(max-width: 479px) 100vw, (max-width: 767px) 66vw, (max-width: 991px) 34vw, 35vw" alt="" class="cards-image"></div>
-          <h3 id="w-node-c68cb3d6-77c2-63f3-b298-ce27683a776a-017731f2" class="heading-5">Explore</h3>
-          <p id="w-node-c68cb3d6-77c2-63f3-b298-ce27683a776c-017731f2" class="paragraph-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
-          <div class="div-button-card">
-            <a href="exploration.html" class="button-card cc-jumbo-button cc-jumbo-white w-inline-block">
-              <div>Learn More</div>
-            </a>
+        <a data-w-id="19cb929b-c7ed-5ff1-27fe-0065b7cfe37d" style="border-color:rgba(0,0,0,0.5)" href="#" class="div-card w-inline-block">
+          <div class="cards-image-mask"><img src="images/bruno-neurath-wilson-7y3G6s201Gk-unsplash.jpg" srcset="images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-500.jpeg 500w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-800.jpeg 800w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-1600.jpeg 1600w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-2000.jpeg 2000w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-2600.jpeg 2600w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-3200.jpeg 3200w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash.jpg 4608w" height="60" sizes="(max-width: 479px) 100vw, (max-width: 767px) 75vw, (max-width: 991px) 25vw, 26vw" alt="" class="cards-image"></div>
+          <div>
+            <h3 class="heading-5">Explore</h3>
+            <p class="paragraph-3">Data exploration made easy. We built a dashboard to explore more than 20 000 central bank speeches without a single line of code.</p>
           </div>
-        </div>
-        <div id="w-node-a0653ddd-2954-189f-320b-98e9c3075c21-017731f2" class="div-card">
-          <div class="cards-image-mask"><img src="images/placeholder-1.svg" alt="" class="cards-image"></div>
-          <h3 id="w-node-a0653ddd-2954-189f-320b-98e9c3075c24-017731f2" class="heading-5">Data</h3>
-          <p id="w-node-a0653ddd-2954-189f-320b-98e9c3075c26-017731f2" class="paragraph-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
-          <div class="div-button-card">
-            <a href="data.html" class="button-card cc-jumbo-button cc-jumbo-white w-inline-block">
-              <div>Learn More</div>
-            </a>
+        </a>
+        <a data-w-id="3a722712-7f62-61ff-7d0a-c8e7610f20f2" style="border-color:rgba(0,0,0,0.5)" href="#" class="div-card w-inline-block">
+          <div class="cards-image-mask"><img src="images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg" srcset="images/mika-baumeister-Tz1k07Jl2no-unsplash-p-500.jpeg 500w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-800.jpeg 800w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1080.jpeg 1080w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1600.jpeg 1600w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2000.jpeg 2000w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2600.jpeg 2600w, images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg 2624w" height="60" sizes="(max-width: 479px) 100vw, (max-width: 767px) 75vw, (max-width: 991px) 25vw, 26vw" alt="" class="cards-image"></div>
+          <div>
+            <h3 class="heading-5">Data</h3>
+            <p class="paragraph-3">Free for everyone! You can search, filter and download parts or all of our dataset for free. But please refer to us in your papers.</p>
           </div>
-        </div>
-        <div id="w-node-fbee3573-abbb-70cf-ae4c-befb806c90ea-017731f2" class="div-card">
-          <div class="cards-image-mask"><img src="images/placeholder-1.svg" alt="" class="cards-image"></div>
-          <h3 id="w-node-fbee3573-abbb-70cf-ae4c-befb806c90ed-017731f2" class="heading-5">Documentation</h3>
-          <p id="w-node-fbee3573-abbb-70cf-ae4c-befb806c90ef-017731f2" class="paragraph-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
-          <div class="div-button-card">
-            <a href="documentation.html" class="button-card cc-jumbo-button cc-jumbo-white w-inline-block">
-              <div>Learn More</div>
-            </a>
+        </a>
+        <a data-w-id="ab793e33-e2ce-c9a8-ae92-5cc347ac722d" style="border-color:rgba(0,0,0,0.5)" href="#" class="div-card w-inline-block">
+          <div class="cards-image-mask"><img src="images/portfolio-4---wide.svg" height="60" alt="" class="cards-image"></div>
+          <div>
+            <h3 class="heading-5">Documentation</h3>
+            <p class="paragraph-3">Want to know more about the dashboard and how we get the speeches and their meta data? </p>
           </div>
-        </div>
+        </a>
+        <a data-w-id="481036b1-bb28-fde4-e62a-8808a6e19dfd" style="border-color:rgba(0,0,0,0.5)" href="#" class="div-card w-inline-block">
+          <div class="cards-image-mask"><img src="images/Icon-1.svg" height="60" alt="" class="cards-image"></div>
+          <div>
+            <h3 class="heading-5">contact</h3>
+            <p class="paragraph-3">You can always reach out to us if you have any questions about the dataset or the website. </p>
+          </div>
+        </a>
+        <a data-w-id="484eda0b-a464-f4c2-d2cd-32810e2118e6" style="border-color:rgba(0,0,0,0.5)" href="#" class="div-card w-inline-block">
+          <div class="cards-image-mask"><img src="images/bruno-neurath-wilson-7y3G6s201Gk-unsplash.jpg" srcset="images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-500.jpeg 500w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-800.jpeg 800w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-1600.jpeg 1600w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-2000.jpeg 2000w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-2600.jpeg 2600w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-3200.jpeg 3200w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash.jpg 4608w" height="60" sizes="(max-width: 479px) 100vw, (max-width: 767px) 75vw, (max-width: 991px) 25vw, 26vw" alt="" class="cards-image"></div>
+          <div>
+            <h3 class="heading-5">github project</h3>
+            <p class="paragraph-3">Data exploration made easy. We built a dashboard to explore more than 20 000 central bank speeches without a single line of code.</p>
+          </div>
+        </a>
       </div>
     </div>
   </section>
