--- a/news.html
+++ b/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 17 2021 10:41:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Feb 27 2021 12:22:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6022e50b4e2530806325c706" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,9 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" data-no-scroll="1" role="banner" class="navigation w-nav">
     <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
-    <a href="index.html" class="logo-link w-nav-brand"></a>
+    <a href="index.html" class="logo-link w-nav-brand"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16.359375px, (max-width: 991px) 3vw, 8vw" srcset="images/cbaLogoFinal.png 500w, images/cbaLogoFinal.png 800w, images/cbaLogoFinal.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
+      <div class="text-block-6">CENTRAL BANK SPEECHES</div>
+    </a>
     <div class="navigation-wrap">
       <div class="menu w-clearfix">
         <nav role="navigation" class="navigation-items w-nav-menu">
@@ -31,9 +33,7 @@
           <a href="exploration.html" class="navigation-item w-nav-link">Exploration</a>
           <a href="data.html" class="navigation-item w-nav-link">Data</a>
           <div class="dropdownwrapper">
-            <div data-w-id="Div Block" class="div-trigger">
-              <div class="text-block">ABOUT</div>
-            </div>
+            <a href="contact.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">ABOUT</a>
             <div class="div-content">
               <a href="news.html" aria-current="page" class="navigation-item w-nav-link w--current">NEWS</a>
               <a href="documentation.html" class="navigation-item w-nav-link">DOCUMENTATION</a>
