--- a/data.html
+++ b/data.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 11 2021 13:58:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Feb 27 2021 12:22:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6022e4d690e114e006b8ca38" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,9 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" data-no-scroll="1" role="banner" class="navigation w-nav">
     <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
-    <a href="index.html" class="logo-link w-nav-brand"></a>
+    <a href="index.html" class="logo-link w-nav-brand"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16.359375px, (max-width: 991px) 3vw, 8vw" srcset="images/cbaLogoFinal.png 500w, images/cbaLogoFinal.png 800w, images/cbaLogoFinal.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
+      <div class="text-block-6">CENTRAL BANK SPEECHES</div>
+    </a>
     <div class="navigation-wrap">
       <div class="menu w-clearfix">
         <nav role="navigation" class="navigation-items w-nav-menu">
@@ -31,9 +33,7 @@
           <a href="exploration.html" class="navigation-item w-nav-link">Exploration</a>
           <a href="data.html" aria-current="page" class="navigation-item w-nav-link w--current">Data</a>
           <div class="dropdownwrapper">
-            <div data-w-id="Div Block" class="div-trigger">
-              <div class="text-block">ABOUT</div>
-            </div>
+            <a href="contact.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">ABOUT</a>
             <div class="div-content">
               <a href="news.html" class="navigation-item w-nav-link">NEWS</a>
               <a href="documentation.html" class="navigation-item w-nav-link">DOCUMENTATION</a>
@@ -53,12 +53,7 @@
       </div>
     </div>
   </header>
-  <div class="section">
-    <div class="container">
-  <iframe src="http://35.246.191.18:5601/app/dashboards#/view/727fe200-7109-11eb-ba89-bf6e91467462?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-15m,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),panels:!((embeddableConfig:(enhancements:()),gridData:(h:8,i:dac2c15c-2407-458c-b5cc-381ef1d45a49,w:24,x:13,y:0),id:'59024f20-7109-11eb-ba89-bf6e91467462',panelIndex:dac2c15c-2407-458c-b5cc-381ef1d45a49,type:visualization,version:'7.11.0'),(embeddableConfig:(enhancements:()),gridData:(h:15,i:'3344a6e9-2a6c-469e-a25a-297b0d23ad4b',w:24,x:13,y:8),id:e5855650-7108-11eb-ba89-bf6e91467462,panelIndex:'3344a6e9-2a6c-469e-a25a-297b0d23ad4b',type:lens,version:'7.11.0')),query:(language:kuery,query:''),tags:!(),timeRestore:!f,title:testtable,viewMode:view)&show-query-input=true&show-time-filter=true" height="1000" width="1000"></iframe>
-  </div>
-  </div>
-  
+  <div class="section-4"></div>
   <div class="section">
     <div class="container">
       <div class="footer-wrap">
