tabs in exploration

--- a/data.html
+++ b/data.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Feb 27 2021 12:22:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 09 2021 22:45:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6022e4d690e114e006b8ca38" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" data-no-scroll="1" role="banner" class="navigation w-nav">
     <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
-    <a href="index.html" class="logo-link w-nav-brand"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16.359375px, (max-width: 991px) 3vw, 8vw" srcset="images/cbaLogoFinal.png 500w, images/cbaLogoFinal.png 800w, images/cbaLogoFinal.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
+    <a href="index.html" class="logo-link w-nav-brand"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 767px) 7vw, 8vw" srcset="images/cbaLogoFinal-p-500.png 500w, images/cbaLogoFinal-p-800.png 800w, images/cbaLogoFinal-p-1080.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
       <div class="text-block-6">CENTRAL BANK SPEECHES</div>
     </a>
     <div class="navigation-wrap">
@@ -53,13 +53,13 @@
       </div>
     </div>
   </header>
-  <div class="section-4"></div>
+  <div class="section-4" >
+  <iframe src="http://35.246.191.18:5601/app/dashboards#/view/f99a2680-812e-11eb-9e9f-7dc520b36043?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'2000-02-19T15%3A42%3A59.217Z'%2Cto%3A'2007-05-29T05%3A47%3A35.316Z'))&show-query-input=true&show-time-filter=true" height="1000" width="100%"></iframe>
+  </div>
   <div class="section">
     <div class="container">
       <div class="footer-wrap">
-        <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="images/webflow-w-small2x_1webflow-w-small2x.png" width="15" alt="" class="webflow-logo-tiny">
-          <div class="paragraph-tiny">Powered by Webflow</div>
-        </a>
+        <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"></a>
       </div>
     </div>
   </div>
