--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Feb 27 2021 12:22:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 09 2021 22:45:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="600ec0335d96f052017731f2" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" data-no-scroll="1" role="banner" class="navigation w-nav">
     <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
-    <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16.359375px, (max-width: 991px) 3vw, 8vw" srcset="images/cbaLogoFinal.png 500w, images/cbaLogoFinal.png 800w, images/cbaLogoFinal.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
+    <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 767px) 7vw, 8vw" srcset="images/cbaLogoFinal-p-500.png 500w, images/cbaLogoFinal-p-800.png 800w, images/cbaLogoFinal-p-1080.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
       <div class="text-block-6">CENTRAL BANK SPEECHES</div>
     </a>
     <div class="navigation-wrap">
@@ -54,7 +54,7 @@
           <div class="intro-text">
             <div class="heading-jumbo">Tracking Central Bank Talk<br>via Data Science</div>
             <div class="paragraph-bigger cc-bigger-white-light">What do central bankers talk about<br>and why? The Central Bank Observer provides <br>a (free) exploration and data of central bankers <br>speeches<br></div>
-            <a href="documentation.html" class="button cc-jumbo-button cc-jumbo-white w-inline-block">
+            <a href="#cards-section" class="button cc-jumbo-button cc-jumbo-white w-inline-block">
               <div class="text-block-7">Learn More</div>
             </a>
           </div>
@@ -62,7 +62,7 @@
       </div>
     </div>
   </div>
-  <section id="cards-section" class="cards-section-2"><img src="images/pfeil-orange.svg" loading="lazy" data-w-id="f7352420-c24f-1bb9-7c80-c2d1c9b72f5f" alt="" class="image-5">
+  <section id="cards-section" class="cards-section-2">
     <div class="centered-container-2 w-container">
       <div class="cards-grid-container-2">
         <div id="w-node-block-2-017731f2" class="div-block-7">
@@ -71,7 +71,7 @@
         <a data-w-id="19cb929b-c7ed-5ff1-27fe-0065b7cfe37d" style="border-color:rgba(0,0,0,0.5)" href="#" class="div-card w-inline-block">
           <div class="cards-image-mask"><img src="images/bruno-neurath-wilson-7y3G6s201Gk-unsplash.jpg" srcset="images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-500.jpeg 500w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-800.jpeg 800w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-1600.jpeg 1600w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-2000.jpeg 2000w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-2600.jpeg 2600w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash-p-3200.jpeg 3200w, images/bruno-neurath-wilson-7y3G6s201Gk-unsplash.jpg 4608w" height="60" sizes="(max-width: 479px) 100vw, (max-width: 767px) 75vw, (max-width: 991px) 25vw, 26vw" alt="" class="cards-image"></div>
           <div>
-            <h3 class="heading-5">Explore</h3>
+            <h3 class="heading-5">Data Exploration</h3>
             <p class="paragraph-3">Data exploration made easy. We built a dashboard to explore more than 20 000 central bank speeches without a single line of code.</p>
           </div>
         </a>
@@ -184,9 +184,7 @@
   <div class="section">
     <div class="container">
       <div class="footer-wrap">
-        <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="images/webflow-w-small2x_1webflow-w-small2x.png" width="15" alt="" class="webflow-logo-tiny">
-          <div class="paragraph-tiny">Powered by Webflow</div>
-        </a>
+        <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"></a>
       </div>
     </div>
   </div>
