--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Feb 27 2021 12:22:01 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 09 2021 22:45:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6022e519db29204892ebea84" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" data-no-scroll="1" role="banner" class="navigation w-nav">
     <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
-    <a href="index.html" class="logo-link w-nav-brand"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16.359375px, (max-width: 991px) 3vw, 8vw" srcset="images/cbaLogoFinal.png 500w, images/cbaLogoFinal.png 800w, images/cbaLogoFinal.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
+    <a href="index.html" class="logo-link w-nav-brand"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 767px) 7vw, 8vw" srcset="images/cbaLogoFinal-p-500.png 500w, images/cbaLogoFinal-p-800.png 800w, images/cbaLogoFinal-p-1080.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
       <div class="text-block-6">CENTRAL BANK SPEECHES</div>
     </a>
     <div class="navigation-wrap">
@@ -66,9 +66,7 @@
   <div class="section">
     <div class="container">
       <div class="footer-wrap">
-        <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="images/webflow-w-small2x_1webflow-w-small2x.png" width="15" alt="" class="webflow-logo-tiny">
-          <div class="paragraph-tiny">Powered by Webflow</div>
-        </a>
+        <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"></a>
       </div>
     </div>
   </div>
