correct change to time series tab

--- a/exploration.html
+++ b/exploration.html
@@ -72,7 +72,7 @@
           <iframe src="http://35.246.191.18:5601/app/dashboards#/view/d6ba9350-888d-11eb-b9bb-4b613d314abf?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1990-03-19T07%3A20%3A10.588Z'%2Cto%3Anow))&show-query-input=true&hide-filter-bar=true" height="800" width="100%"></iframe>
         </div>
       </div>
-
+      <div class="tabs-menu w-tab-menu">
         <a data-w-tab="Tab 5" class="tab-link-tab-2 w-inline-block w-tab-link">
           <div class="text-block-9">Time Series</div>
         </a>
