added data table

--- a/data.html
+++ b/data.html
@@ -53,11 +53,8 @@
   </div>
   <div class="section-5"></div>
   <div class="exploretabs">
-    <div>
-      <h1>The biggest dataset of central bank speeches worldwide</h1>
-    </div>
   </div>
-  <div class="datatablediv"><img src="images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg" loading="lazy" sizes="(max-width: 2624px) 100vw, 2624px" srcset="images/mika-baumeister-Tz1k07Jl2no-unsplash-p-500.jpeg 500w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-800.jpeg 800w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1080.jpeg 1080w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-1600.jpeg 1600w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2000.jpeg 2000w, images/mika-baumeister-Tz1k07Jl2no-unsplash-p-2600.jpeg 2600w, images/mika-baumeister-Tz1k07Jl2no-unsplash.jpg 2624w" alt=""></div>
+  <div class="datatablediv"><iframe src="http://35.246.191.18:5601/app/dashboards#/view/727fe200-7109-11eb-ba89-bf6e91467462?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1990-03-22T18%3A31%3A26.103Z'%2Cto%3Anow))&show-query-input=true&hide-filter-bar=true" height="800" width="100%"></iframe></div>
   <div class="section">
     <div class="container">
       <div class="footer-wrap">
