some changes in raw menu tab

--- a/raw.html
+++ b/raw.html
@@ -67,7 +67,7 @@
       </div>
       <div class="tabs-menu w-tab-menu">
         <a data-w-tab="Tab 2" class="tab-link-tab-2 w-inline-block w-tab-link">
-          <div class="text-block-9">Zeitreihe</div>
+          <div class="text-block-9">Time Series</div>
         </a>
         <a data-w-tab="Tab 6" class="tab-link-tab-2 w-inline-block w-tab-link w--current">
           <div class="text-block-9">Map</div>
